--- a/public/lib/css/excel.css
+++ b/public/lib/css/excel.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -134,7 +135,7 @@ main > form#iteration-info section.form-fields div label em {
 }
 
 main > form#iteration-info > section.file-drop-target {
-  max-height: calc(100% - 140px);
+  max-height: calc(100% - 90px);
 }
 
 main > form#iteration-info > section.file-drop-target label.file-dropzone {
@@ -143,7 +144,7 @@ main > form#iteration-info > section.file-drop-target label.file-dropzone {
   background-color: #f3f6fa;
   border-radius: 20px;
   overflow: hidden;
-  min-height: 220px;
+  min-height: 270px;
   width: 500px;
   min-width: 500px;
   position: relative;
@@ -154,7 +155,7 @@ main > form#iteration-info > section.file-drop-target label.file-dropzone {
 main > form#iteration-info > section.file-drop-target label.file-dropzone:after {
   content: "Drag & Drop your JIRA .CSV exports here!";
   position: absolute;
-  line-height: 1.4;
+  line-height: 3.5;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -176,8 +177,8 @@ main > form#iteration-info > section.file-drop-target label.file-dropzone:before
   bottom: 0;
   left: 0;
   z-index: 10;
-  line-height: 370px;
-  background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' style='opacity:0.2;' viewBox='0 0 20 17'%3E%3Cpath d='M10 0L4.8 4.9h3.3V10h3.8V4.9h3.3L10 0zm9.3 11.5l-3.2-2.1h-2l3.4 2.6H14l-.2.1-.8 2.3H7l-.8-2.2L6 12H2.4l3.4-2.6h-2L.6 11.5c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9L20 13c.1-.5-.2-1.2-.7-1.5z'/%3E%3C/svg%3E") center 55px no-repeat;
+  line-height: 420px;
+  background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' style='opacity:0.2;' viewBox='0 0 20 17'%3E%3Cpath d='M10 0L4.8 4.9h3.3V10h3.8V4.9h3.3L10 0zm9.3 11.5l-3.2-2.1h-2l3.4 2.6H14l-.2.1-.8 2.3H7l-.8-2.2L6 12H2.4l3.4-2.6h-2L.6 11.5c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9L20 13c.1-.5-.2-1.2-.7-1.5z'/%3E%3C/svg%3E") center 80px no-repeat;
   background-size: 128px;
 }
 
@@ -186,13 +187,50 @@ main > form#iteration-info > section.file-drop-target label.file-dropzone [type=
   margin-left: -400px;
 }
 
-main > :nth-child(2) {
+main > div.sort-order {
   max-width: 550px;
-  height: 375px;
+  height: 425px;
+  position: relative;
+}
+
+main > div.sort-order button {
+  width: 50%;
+  height: 40px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
+  max-width: 40px;
+  white-space: nowrap;
+  border: 2px solid green;
+  background-color: #80ff80;
+  font-size: 14px;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  text-indent: 40px;
+}
+
+main > div.sort-order button::after {
+  content: '✓';
+  color: white;
+  line-height: 40px;
+  font-size: 40px;
+  text-indent: 0px;
+  position: absolute;
+  display: block;
+  background: green;
+  width: 40px;
+  height: 40px;
+  left: 0;
+  top: 0;
+}
+
+main > div.sort-order button:hover {
+  max-width: 50%;
 }
 
 main .pbars {
-  min-width: 80%;
+  min-width: 95%;
   height: 25px;
 }
 
@@ -249,10 +287,10 @@ ul li {
   display: block;
   position: relative;
   max-width: 600px;
-  width: 100%;
+  width: calc(100% - 35px);
   height: 32px;
   font-size: 12px;
-  margin: 5px 0;
+  margin: 5px 0 5px 35px;
   line-height: 32px;
   text-indent: 20px;
 }
@@ -274,6 +312,31 @@ ul li::before {
   transition: 0.3s all ease-in-out;
   position: absolute;
   z-index: -1;
+}
+
+ul li::after {
+  content: attr(data-slot);
+  display: block;
+  height: 30px;
+  width: 30px;
+  line-height: 38px;
+  border-radius: 50%;
+  background: #aaa;
+  color: #000;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: -35px;
+  text-indent: 0;
+  text-align: right;
+  padding: 0;
+  font-size: 30px;
+  letter-spacing: -5px;
+  padding-right: 5px;
+  font-weight: bold;
+  color: white;
 }
 
 ul li.drag-sort-active {
