--- a/_scss/excel.scss
+++ b/_scss/excel.scss
@@ -166,7 +166,7 @@ main {
 
     & > div.sort-order {
         max-width: 550px;
-        height: 425px;
+        height: 465px;
         position:relative;
 
         button {
@@ -402,16 +402,20 @@ $bar-size:18px;
 
 table {
            font-family:sans-serif;
+           width:100%;
 
+       }
+       tr {
+        border-bottom:3px solid #000;
        }
 
        th {
-            padding:1px 10px;
+            padding:3px 10px;
        }
 
        td {
            text-align:right;
-           padding:1px 10px;
+           padding:3px 10px;
        }
 
 td:nth-of-type(-n+3){
