--- a/_scss/excel.scss
+++ b/_scss/excel.scss
@@ -169,33 +169,33 @@ main {
         height: 465px;
         position:relative;
 
-        button {
+        .expandable {
             width:50%;
-            height:40px;
+            height:30px;
+            max-width:30px;
+            text-indent: 30px;
             position:absolute;
             bottom:0;
-            right:0;
+            left:0;
             overflow:hidden;
-            max-width:40px;
             white-space: nowrap;
             transition: 0.3s all ease-in-out;
             font-size: 16px;
-            text-indent: 40px;
             font-weight: bold;
             text-shadow: 0 -1px 0 #FFF;
             
             
             &::after{
                 content:'';
-                text-indent: -40px;
-                color:white;
-                line-height: 40px;
-                font-size:40px;
+                text-indent: -30px;
+                line-height: 30px;
+                font-size:30px;
                 text-indent: 0px;
+                width:30px;
+                height:30px;
+                color:white;
                 position: absolute;
                 display: block;
-                width:40px;
-                height:40px;
                 left:0;
                 top:0;
                 text-align: center;
@@ -217,29 +217,29 @@ main {
                 }
             }
             
-            &.insert-missing-day {
-                border:2px solid #003bbc;
-                background-color:lighten(#84a7f2, 15%);
-                right:unset;
-                left:0;
-                text-indent:-40px;
+            // &.insert-missing-day {
+            //     border:2px solid #003bbc;
+            //     background-color:lighten(#84a7f2, 15%);
+            //     right:unset;
+            //     left:0;
+            //     text-indent:-40px;
                 
-                &::after {
-                    background:#003bbc url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 127 114' fill='white'%3E%3Cpath fill-rule='evenodd' d='M122.8 45.9h-5.3v-4.3h9.5V48h-4.2v-2zm-17.2-4.3H116V46h-10.3v-4.3zM35.4.3h79v27h-79V.3zM18 73.8a17.4 17.4 0 1 1-.1-34.8 17.4 17.4 0 0 1 0 34.8zm12-21.4h-8v-8h-8v8H6v8h8v8h8v-8h8v-8zm27 4.1L42.7 67v-6.4H38v-8.2h4.7V46L57 56.5zm49.5 14.8H96.4v-4.2h10.2v4.2zm-3-29.7V46H93.3v-4.3h10.2zm-10 29.7H83.4v-4.2h10.2v4.2zm-3-29.7V46H80.3v-4.3h10.2zm-9.2 29.7H71v-4.2h10.3v4.2zM78 41.6V46H67.8v-4.3h10.3zM69 71.3h-9.4V65h4.2v2h5.2v4.2zm-5-8.5H59v-10h5v10zm1.8-21.2V46h-2V51h-4.2v-9.5h6.2zm48.8 71.7H35.4v-27h79v27zM108.8 67H119v4.2h-10.3v-4.2zM127 49.8v10h-4v-10h4zm-4.3 12h4.3v9.5h-6.3v-4.2h2v-5.2z'/%3E%3C/svg%3E") 3px 5px no-repeat;
-                    background-size: 75%;
+            //     &::after {
+            //         background:#003bbc url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 127 114' fill='white'%3E%3Cpath fill-rule='evenodd' d='M122.8 45.9h-5.3v-4.3h9.5V48h-4.2v-2zm-17.2-4.3H116V46h-10.3v-4.3zM35.4.3h79v27h-79V.3zM18 73.8a17.4 17.4 0 1 1-.1-34.8 17.4 17.4 0 0 1 0 34.8zm12-21.4h-8v-8h-8v8H6v8h8v8h8v-8h8v-8zm27 4.1L42.7 67v-6.4H38v-8.2h4.7V46L57 56.5zm49.5 14.8H96.4v-4.2h10.2v4.2zm-3-29.7V46H93.3v-4.3h10.2zm-10 29.7H83.4v-4.2h10.2v4.2zm-3-29.7V46H80.3v-4.3h10.2zm-9.2 29.7H71v-4.2h10.3v4.2zM78 41.6V46H67.8v-4.3h10.3zM69 71.3h-9.4V65h4.2v2h5.2v4.2zm-5-8.5H59v-10h5v10zm1.8-21.2V46h-2V51h-4.2v-9.5h6.2zm48.8 71.7H35.4v-27h79v27zM108.8 67H119v4.2h-10.3v-4.2zM127 49.8v10h-4v-10h4zm-4.3 12h4.3v9.5h-6.3v-4.2h2v-5.2z'/%3E%3C/svg%3E") 3px 5px no-repeat;
+            //         background-size: 75%;
 
-                }
-                &:hover::after {
-                    margin-left:calc(100% - 40px);
-                }
-            }
+            //     }
+            //     &:hover::after {
+            //         margin-left:calc(100% - 40px);
+            //     }
+            // }
 
             &:disabled {
                 border:2px solid #AAA;
                 background-color:#ccc;
                 opacity:0.75;
                 cursor: not-allowed;
-                max-width: 40px;
+                max-width: 30px;
 
                 &::after {
                     background-color:#BBB;
@@ -277,6 +277,10 @@ ul {
         margin: 5px 0 5px 35px;
         line-height: 32px;
         text-indent: 20px;
+
+        &:first-of-type {
+            margin-bottom:20px;
+        }
 
         &::before {
             content: "";
@@ -331,6 +335,64 @@ ul {
 
 .output-table {
     min-width: 95%;
+}
+
+a.issue-link, a.issue-parent-link {
+    font-size: 13px;
+    text-decoration:none;
+    font-weight:normal;
+
+    &:hover {
+        text-decoration:underline;
+    }
+
+    b {
+        font-weight:normal;
+        font-size:16px;
+        text-decoration-color: #BBB;
+    }
+}
+
+a.issue-link {
+    color:#3007;
+    
+    &:hover {
+        color:#600; 
+        text-decoration-color: #300;
+        b {
+            text-decoration-style: double;
+            text-decoration-color: #A00;
+            font-weight:bold;
+            color:#A00
+        }
+    }
+
+    b {
+        color:#600;
+        text-decoration-color: #600;
+    }
+}
+
+
+
+a.issue-parent-link {
+    color:#0037;
+    
+    &:hover {
+        color:#006; 
+        text-decoration-color: #006;
+        b {
+            text-decoration-style: double;
+            text-decoration-color: #00A;
+            color:#00A;
+            font-weight:bold;
+        }
+    }
+
+    b {
+        color:#0067;
+        text-decoration-color: #006;
+    }
 }
 
 $bar-size:18px;
@@ -424,4 +486,143 @@ td:nth-of-type(-n+3){
 
 td:nth-of-type(-n+1){
     text-align:left;
+}
+
+
+$picker-dimensions:25px;
+.picker {
+    position:absolute; 
+    bottom:0;
+    right:0;
+   font-family:monospace;
+   *, & {
+      &, 
+      &::before, 
+      &::after {
+         box-sizing:border-box;
+      }
+   }
+   
+   &::before {
+       content:'Days in Iteration';
+       font-family:cursive;
+       font-size:12px; 
+       text-style:italic;
+       position:absolute;
+       display:block;
+       right:0;
+       top:-14px;
+       color:#999A;
+       white-space:nowrap;
+   }
+         
+   .picker-panel {
+      width:$picker-dimensions * 1.5;
+      height:$picker-dimensions;
+      overflow:hidden;
+      max-height:$picker-dimensions;
+      border:1px solid #888;
+      box-shadow:inset 3px 3px 6px #0002;
+      line-height:$picker-dimensions * 0.4;
+      font-size:$picker-dimensions * 0.4;
+      text-align:center;
+      word-spacing:$picker-dimensions;
+      position:relative;
+      display:inline-block;
+      vertical-align:bottom;
+      z-index:1;
+
+      &>*,&>*:after {
+         width:100%;
+         height:100%;
+         min-height:100%;
+         left:0;
+         top:0;
+         right:0;
+         bottom:0;
+         line-height:$picker-dimensions;
+         font-size:$picker-dimensions * 0.6;
+         position:absolute;
+
+      }
+
+      label {
+         overflow:hidden;
+         position:absolute;
+         text-indent:2px;
+         &::after {
+            $content:'S ';
+            @for $i from 1 to 60 {
+              $content: $content + ' ' + $i;
+            }
+            content: "#{$content}";
+            top:var(--value);
+            left:0;
+            transition:all 0.15s ease-in-out;
+            z-index:-1;
+         }
+      }
+      input {
+         font-family:inherit;
+         background-color:#FFF0;
+         border:0 none;
+         display:inline-block;
+         position:absolute;
+         z-index:2;
+         text-align:center;
+         
+         &:focus, 
+         &:valid {
+            & + label::after{
+               display:none;
+            }
+         }
+         &:not(:focus),
+         &:invalid {
+            &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+              color: transparent;
+            }
+            &::-moz-placeholder { /* Firefox 19+ */
+              color: transparent;
+            }
+            &:-ms-input-placeholder { /* IE 10+ */
+              color: transparent;
+            }
+            &:-moz-placeholder { /* Firefox 18- */
+              color: transparent;
+            }
+         }
+      }
+   }
+   button.picker-pushers {
+      width:$picker-dimensions;
+      height:$picker-dimensions;
+      display:inline-block;
+      border:1px solid #aaa;
+      vertical-align:bottom;
+      position:relative;
+      font-size:$picker-dimensions * 0.5;
+      text-shadow:-1px -1px 0 #000, 1px 1px 0 #eee;
+      color:#999;
+      line-height:$picker-dimensions;
+      padding:0;
+      border-radius: 0 #{$picker-dimensions * 0.1} #{$picker-dimensions * 0.1} 0;
+      background-color:#ddd;
+      box-shadow:inset 2px 2px 2px #EEE, inset -2px -2px 2px #CCC;
+      margin:0 0 0 -8px;
+
+      &::after {
+         content:'⬆︎'
+      }
+      &:first-of-type{
+        margin:0 -8px 0 0 ;
+
+         border-radius: #{$picker-dimensions * 0.1} 0 0 #{$picker-dimensions * 0.1};
+
+         &::after {
+            content:'⬇︎';
+         }
+      }
+
+   }
 }
