--- a/public/lib/css/excel.css
+++ b/public/lib/css/excel.css
@@ -193,34 +193,34 @@ main > div.sort-order {
   position: relative;
 }
 
-main > div.sort-order button {
+main > div.sort-order .expandable {
   width: 50%;
-  height: 40px;
+  height: 30px;
+  max-width: 30px;
+  text-indent: 30px;
   position: absolute;
   bottom: 0;
-  right: 0;
+  left: 0;
   overflow: hidden;
-  max-width: 40px;
   white-space: nowrap;
   -webkit-transition: 0.3s all ease-in-out;
   transition: 0.3s all ease-in-out;
   font-size: 16px;
-  text-indent: 40px;
   font-weight: bold;
   text-shadow: 0 -1px 0 #FFF;
 }
 
-main > div.sort-order button::after {
+main > div.sort-order .expandable::after {
   content: '';
-  text-indent: -40px;
-  color: white;
-  line-height: 40px;
-  font-size: 40px;
+  text-indent: -30px;
+  line-height: 30px;
+  font-size: 30px;
   text-indent: 0px;
+  width: 30px;
+  height: 30px;
+  color: white;
   position: absolute;
   display: block;
-  width: 40px;
-  height: 40px;
   left: 0;
   top: 0;
   text-align: center;
@@ -228,51 +228,34 @@ main > div.sort-order button::after {
   transition: content 0.1s ease-in-out, margin-left 0.27s ease-in-out;
 }
 
-main > div.sort-order button:hover {
+main > div.sort-order .expandable:hover {
   max-width: 50%;
 }
 
-main > div.sort-order button.done-sorting {
+main > div.sort-order .expandable.done-sorting {
   border: 2px solid green;
   background-color: #80ff80;
 }
 
-main > div.sort-order button.done-sorting::after {
+main > div.sort-order .expandable.done-sorting::after {
   content: '✓';
   background: green;
   font-weight: normal;
 }
 
-main > div.sort-order button.insert-missing-day {
-  border: 2px solid #003bbc;
-  background-color: #c9d9f9;
-  right: unset;
-  left: 0;
-  text-indent: -40px;
-}
-
-main > div.sort-order button.insert-missing-day::after {
-  background: #003bbc url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 127 114' fill='white'%3E%3Cpath fill-rule='evenodd' d='M122.8 45.9h-5.3v-4.3h9.5V48h-4.2v-2zm-17.2-4.3H116V46h-10.3v-4.3zM35.4.3h79v27h-79V.3zM18 73.8a17.4 17.4 0 1 1-.1-34.8 17.4 17.4 0 0 1 0 34.8zm12-21.4h-8v-8h-8v8H6v8h8v8h8v-8h8v-8zm27 4.1L42.7 67v-6.4H38v-8.2h4.7V46L57 56.5zm49.5 14.8H96.4v-4.2h10.2v4.2zm-3-29.7V46H93.3v-4.3h10.2zm-10 29.7H83.4v-4.2h10.2v4.2zm-3-29.7V46H80.3v-4.3h10.2zm-9.2 29.7H71v-4.2h10.3v4.2zM78 41.6V46H67.8v-4.3h10.3zM69 71.3h-9.4V65h4.2v2h5.2v4.2zm-5-8.5H59v-10h5v10zm1.8-21.2V46h-2V51h-4.2v-9.5h6.2zm48.8 71.7H35.4v-27h79v27zM108.8 67H119v4.2h-10.3v-4.2zM127 49.8v10h-4v-10h4zm-4.3 12h4.3v9.5h-6.3v-4.2h2v-5.2z'/%3E%3C/svg%3E") 3px 5px no-repeat;
-  background-size: 75%;
-}
-
-main > div.sort-order button.insert-missing-day:hover::after {
-  margin-left: calc(100% - 40px);
-}
-
-main > div.sort-order button:disabled {
+main > div.sort-order .expandable:disabled {
   border: 2px solid #AAA;
   background-color: #ccc;
   opacity: 0.75;
   cursor: not-allowed;
-  max-width: 40px;
+  max-width: 30px;
 }
 
-main > div.sort-order button:disabled::after {
+main > div.sort-order .expandable:disabled::after {
   background-color: #BBB;
 }
 
-main > div.sort-order button:disabled:hover::after {
+main > div.sort-order .expandable:disabled:hover::after {
   content: ' ⃠ ';
   font-weight: bold;
   font-size: 32px;
@@ -300,6 +283,10 @@ ul li {
   margin: 5px 0 5px 35px;
   line-height: 32px;
   text-indent: 20px;
+}
+
+ul li:first-of-type {
+  margin-bottom: 20px;
 }
 
 ul li::before {
@@ -358,6 +345,73 @@ ul li.drag-sort-active {
 
 .output-table {
   min-width: 95%;
+}
+
+a.issue-link, a.issue-parent-link {
+  font-size: 13px;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+a.issue-link:hover, a.issue-parent-link:hover {
+  text-decoration: underline;
+}
+
+a.issue-link b, a.issue-parent-link b {
+  font-weight: normal;
+  font-size: 16px;
+  -webkit-text-decoration-color: #BBB;
+          text-decoration-color: #BBB;
+}
+
+a.issue-link {
+  color: #3007;
+}
+
+a.issue-link:hover {
+  color: #600;
+  -webkit-text-decoration-color: #300;
+          text-decoration-color: #300;
+}
+
+a.issue-link:hover b {
+  -webkit-text-decoration-style: double;
+          text-decoration-style: double;
+  -webkit-text-decoration-color: #A00;
+          text-decoration-color: #A00;
+  font-weight: bold;
+  color: #A00;
+}
+
+a.issue-link b {
+  color: #600;
+  -webkit-text-decoration-color: #600;
+          text-decoration-color: #600;
+}
+
+a.issue-parent-link {
+  color: #0037;
+}
+
+a.issue-parent-link:hover {
+  color: #006;
+  -webkit-text-decoration-color: #006;
+          text-decoration-color: #006;
+}
+
+a.issue-parent-link:hover b {
+  -webkit-text-decoration-style: double;
+          text-decoration-style: double;
+  -webkit-text-decoration-color: #00A;
+          text-decoration-color: #00A;
+  color: #00A;
+  font-weight: bold;
+}
+
+a.issue-parent-link b {
+  color: #0067;
+  -webkit-text-decoration-color: #006;
+          text-decoration-color: #006;
 }
 
 .progress-bar {
@@ -535,4 +589,141 @@ td:nth-of-type(-n+3) {
 
 td:nth-of-type(-n+1) {
   text-align: left;
+}
+
+.picker {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-family: monospace;
+}
+
+.picker *, .picker *::before, .picker *::after, .picker, .picker::before, .picker::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.picker::before {
+  content: 'Days in Iteration';
+  font-family: cursive;
+  font-size: 12px;
+  text-style: italic;
+  position: absolute;
+  display: block;
+  right: 0;
+  top: -14px;
+  color: #999A;
+  white-space: nowrap;
+}
+
+.picker .picker-panel {
+  width: 37.5px;
+  height: 25px;
+  overflow: hidden;
+  max-height: 25px;
+  border: 1px solid #888;
+  -webkit-box-shadow: inset 3px 3px 6px #0002;
+          box-shadow: inset 3px 3px 6px #0002;
+  line-height: 10px;
+  font-size: 10px;
+  text-align: center;
+  word-spacing: 25px;
+  position: relative;
+  display: inline-block;
+  vertical-align: bottom;
+  z-index: 1;
+}
+
+.picker .picker-panel > *, .picker .picker-panel > *:after {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  line-height: 25px;
+  font-size: 15px;
+  position: absolute;
+}
+
+.picker .picker-panel label {
+  overflow: hidden;
+  position: absolute;
+  text-indent: 2px;
+}
+
+.picker .picker-panel label::after {
+  content: "S  1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59";
+  top: var(--value);
+  left: 0;
+  -webkit-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  z-index: -1;
+}
+
+.picker .picker-panel input {
+  font-family: inherit;
+  background-color: #FFF0;
+  border: 0 none;
+  display: inline-block;
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+}
+
+.picker .picker-panel input:focus + label::after, .picker .picker-panel input:valid + label::after {
+  display: none;
+}
+
+.picker .picker-panel input:not(:focus)::-webkit-input-placeholder, .picker .picker-panel input:invalid::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: transparent;
+}
+
+.picker .picker-panel input:not(:focus)::-moz-placeholder, .picker .picker-panel input:invalid::-moz-placeholder {
+  /* Firefox 19+ */
+  color: transparent;
+}
+
+.picker .picker-panel input:not(:focus):-ms-input-placeholder, .picker .picker-panel input:invalid:-ms-input-placeholder {
+  /* IE 10+ */
+  color: transparent;
+}
+
+.picker .picker-panel input:not(:focus):-moz-placeholder, .picker .picker-panel input:invalid:-moz-placeholder {
+  /* Firefox 18- */
+  color: transparent;
+}
+
+.picker button.picker-pushers {
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  border: 1px solid #aaa;
+  vertical-align: bottom;
+  position: relative;
+  font-size: 12.5px;
+  text-shadow: -1px -1px 0 #000, 1px 1px 0 #eee;
+  color: #999;
+  line-height: 25px;
+  padding: 0;
+  border-radius: 0 2.5px 2.5px 0;
+  background-color: #ddd;
+  -webkit-box-shadow: inset 2px 2px 2px #EEE, inset -2px -2px 2px #CCC;
+          box-shadow: inset 2px 2px 2px #EEE, inset -2px -2px 2px #CCC;
+  margin: 0 0 0 -8px;
+}
+
+.picker button.picker-pushers::after {
+  content: '⬆︎';
+}
+
+.picker button.picker-pushers:first-of-type {
+  margin: 0 -8px 0 0;
+  border-radius: 2.5px 0 0 2.5px;
+}
+
+.picker button.picker-pushers:first-of-type::after {
+  content: '⬇︎';
 }
