--- a/_scss/excel.scss
+++ b/_scss/excel.scss
@@ -136,12 +136,23 @@ div.sort-order{
         margin: 0; padding: 0; 
 
         li { 
-            display: block; position: relative; width: calc(100% - 35px); height: 32px; font-size: 12px; margin: 5px 0 0px 35px; line-height: 32px; text-indent: 20px; 
+            display: block; position: relative; width: calc(100% - 35px); height: 32px; font-size: 12px; margin: 5px 0 0px 35px; line-height: 32px; text-indent: 20px; cursor:pointer;
 
+            label { 
+                width:100%; height:40px; display:block; cursor:pointer;
+                
+            }
+            
             &:first-of-type { margin-bottom: 20px; }
             &::before { content: ""; display: block; height: 32px; width: 100%; line-height: 30px; border-radius: 30px; background: #eee; color: #333; list-style: none; border: 2px solid #aaa; cursor: grabbing; transition: 0.3s all ease-in-out; position: absolute; z-index: -1; }
             &::after { content: attr(data-slot); display: block; height: 30px; width: 30px; line-height: 38px; border-radius: 50%; background: #aaa; color: #000; position: absolute; z-index: -1; top: 0; left: -35px; text-indent: 0; text-align: right; padding: 0; font-size: 30px; letter-spacing: -5px; padding-right: 5px; font-weight: bold; color: white; }
             &.drag-sort-active { background: #eee6; color: #3333; border: 2px dashed #aaa6; transition: 0.3s all ease-in-out; transform: scale(0.95); }
+            &[data-value='interpolated']::before {
+                background-color:#f001;
+            }
+            &[data-value='stored']::before {
+                background-color:#0f01;
+            }
         }
 
         &:hover li {
