--- a/public/lib/css/excel.css
+++ b/public/lib/css/excel.css
@@ -419,6 +419,32 @@ div.sort-order ul.has-draggable-children:hover li:hover + li::after {
   top: 30px;
 }
 
+div.sort-order:hover {
+  padding-bottom: 30px;
+  -webkit-transition: 0.1s all ease-in-out;
+  transition: 0.1s all ease-in-out;
+}
+
+div.sort-order:hover button.add-record {
+  opacity: 1;
+}
+
+button.add-record {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='167.7' height='17.7'%3E%3Cpath fill='%23D7D7D7' fill-rule='evenodd' d='M12.6 3.3h147.8a6 6 0 0 1 6 6v1.4a6 6 0 0 1-6 6H12.6a6 6 0 0 1-6-6V9.3a6 6 0 0 1 6-6z'/%3E%3Cpath fill='none' stroke='%23707070' stroke-dasharray='2.7 1.3' stroke-width='.7' d='M13.3 4h146.4a6 6 0 0 1 0 12H13.3a6 6 0 0 1 0-12z' opacity='.5'/%3E%3Cpath fill='%237D7D7D' fill-rule='evenodd' d='M151.3 12.5v1.2h-5.5V6.5h5.3v1.2h-3.8v1.6h3.6v1.2h-3.6v2h4zm-7.1-.2l.9 1.4h-1.8l-1-1.6c-.4-.6-.6-1-.8-1-.1-.2-.3-.3-.4-.3l-.7-.1h-.3v3h-1.5V6.5h3c.8 0 1.4 0 1.7.2.4.1.7.3.9.7.2.3.3.7.3 1.1 0 .5-.2 1-.5 1.3-.3.4-.8.6-1.4.7l.8.6.8 1.2zM142.8 9l.2-.5c0-.2 0-.4-.2-.6a.9.9 0 0 0-.5-.3H140v1.8h2.3l.4-.4zM132 6.5h5.3v1.2h-3.9v1.6h3.6v1.2h-3.6v2h4v1.2H132V6.5zm-3 4h-2.8v3.2h-1.4V6.5h1.4v2.8h2.8V6.5h1.5v7.2H129v-3.2zM117 13c-.2.3-.6.5-1 .6l-1.3.2H112V6.5h2.6l1.4.1c.4.2.8.4 1 .7.4.3.6.7.8 1.2l.2 1.6c0 .6 0 1.1-.2 1.6s-.5 1-.8 1.2zm-.6-4c-.1-.4-.3-.6-.5-.8-.1-.1-.3-.3-.6-.3h-1.9v4.7h1.1l.9-.1.6-.3.4-.7.1-1.3-.1-1.3zm-6 3.4l.8 1.4h-1.7l-1-1.6-.8-1c-.1-.2-.3-.3-.4-.3l-.8-.1h-.2v3h-1.5V6.5h3c.8 0 1.4 0 1.7.2.4.1.6.3.8.7.2.3.4.7.4 1.1 0 .5-.2 1-.5 1.3-.3.4-.8.6-1.4.7l.7.6.9 1.2zM109 9l.2-.5-.2-.6a.9.9 0 0 0-.6-.3h-2.1v1.8h2.3l.4-.4zm-8.8 4.7c-1 0-1.9-.3-2.5-1-.6-.6-1-1.5-1-2.7 0-.7.2-1.3.4-1.8.1-.4.4-.7.6-1 .3-.3.6-.5 1-.6a4 4 0 0 1 1.5-.3c1 0 1.9.3 2.5 1 .7.6 1 1.5 1 2.7 0 1.1-.3 2-1 2.7-.6.7-1.4 1-2.5 1zm1.4-5.6c-.3-.4-.8-.6-1.4-.6-.6 0-1 .2-1.4.6-.4.4-.6 1-.6 1.9 0 .8.2 1.4.6 1.8.4.4.8.6 1.4.6.6 0 1-.2 1.4-.6.4-.4.6-1 .6-1.8 0-.9-.2-1.5-.6-1.9zm-8.8 4.3c.4 0 .7 0 1-.3.3-.3.5-.6.6-1.2l1.4.5c-.2.8-.6 1.3-1 1.7a3 3 0 0 1-2 .6 3 3 0 0 1-2.3-1c-.6-.6-1-1.5-1-2.7a4 4 0 0 1 1-2.7c.6-.7 1.4-1 2.4-1a3 3 0 0 1 2.2.8c.3.3.5.7.7 1.3l-1.4.3c-.1-.4-.3-.7-.6-.9-.2-.2-.6-.3-1-.3-.5 0-1 .2-1.2.6-.4.4-.5 1-.5 1.8 0 1 .1 1.6.5 2 .3.4.7.5 1.2.5zm-9.6-6h5.3v1.2h-3.9v1.6h3.6v1.2h-3.6v2h4v1.2h-5.4V6.5zm-1.7 5.8l.9 1.4h-1.7l-1-1.6-.8-1c-.2-.2-.3-.3-.5-.3l-.7-.1h-.3v3H76V6.5h3c.8 0 1.3 0 1.7.2.3.1.6.3.8.7.2.3.3.7.3 1.1 0 .5-.1 1-.5 1.3-.3.4-.7.6-1.4.7l.8.6.8 1.2zM80.2 9l.1-.5c0-.2 0-.4-.2-.6a.9.9 0 0 0-.5-.3h-2.2v1.8h2.4l.4-.4zm-12.4 3H65l-.6 1.6h-1.5l2.7-7.2h1.6l2.8 7.2h-1.5l-.7-1.7zm-1.4-4l-1 2.7h2l-1-2.6zm-11 5.6h-1.5v-6h-2.1V6.5h5.7v1.2h-2.1v6zm-4.7-1.4l.8 1.4h-1.7l-1-1.6-.8-1c-.1-.2-.3-.3-.4-.3l-.8-.1h-.2v3H45V6.5h3c.8 0 1.4 0 1.7.2.4.1.6.3.8.7.2.3.4.7.4 1.1 0 .5-.2 1-.5 1.3-.3.4-.8.6-1.4.7l.7.6.9 1.2zM49.3 9l.2-.5-.2-.6a.9.9 0 0 0-.6-.3h-2.1v1.8h2.3l.4-.4zM38.4 6.5h5.3v1.2H40v1.6h3.6v1.2h-3.6v2h4v1.2h-5.5V6.5zm-3.8 2.7a7 7 0 0 1 1.6.5c.3.2.6.4.7.7.2.3.3.7.3 1.2a2.1 2.1 0 0 1-1.3 2 4 4 0 0 1-1.5.2 3 3 0 0 1-2.1-.6c-.5-.5-.8-1-.9-1.9l1.4-.1c.1.5.3.8.5 1 .3.3.6.4 1 .4.6 0 .9-.1 1.1-.3.3-.2.4-.5.4-.7 0-.2 0-.3-.2-.5l-.5-.3-1.1-.3a4 4 0 0 1-1.7-.7 1.9 1.9 0 0 1-.3-2.4c.2-.4.5-.6.9-.8l1.4-.2c.9 0 1.6.2 2 .6.5.4.7.9.7 1.5l-1.4.1c0-.4-.2-.6-.4-.8l-1-.2c-.3 0-.7 0-1 .2l-.1.5c0 .1 0 .3.2.4.2.2.6.3 1.3.5zM25.9 9v4.7h-1.3V6.5H26l3 4.8V6.5h1.3v7.2h-1.5L26 9zm-4.1-2.5h1.4v7.2h-1.4V6.5z'/%3E%3C/svg%3E");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  border: 0 none;
+  width: 173px;
+  height: 20px;
+  margin: 10px auto 0;
+  -webkit-transform: translateX(-7px);
+          transform: translateX(-7px);
+  display: block;
+  -webkit-transition: 0.1s all ease-in-out;
+  transition: 0.1s all ease-in-out;
+  opacity: 0.25;
+}
+
 .button-row {
   height: 40px;
   display: -webkit-box;
@@ -583,6 +609,40 @@ div.sort-order ul.has-draggable-children:hover li:hover + li::after {
   text-align: center;
 }
 
+td:nth-child(-n+2) {
+  width: 15%;
+  text-align: left;
+}
+
+td:nth-child(n+3) {
+  width: 5%;
+  text-align: right;
+}
+
+td.dim {
+  background: #CCC;
+}
+
+th {
+  border: 1px solid black;
+  background-color: #EEE;
+}
+
+th.dim {
+  background-color: #BBB;
+}
+
+table.outputTable {
+  width: 80%;
+  margin: 10px 10%;
+  border: 1px solid black;
+}
+
+tr > * {
+  border-bottom: 1px solid #000;
+  border-right: 1px solid gray;
+}
+
 /* ANIMATIONS AND @-RULES */
 @-webkit-keyframes progress {
   0% {
@@ -675,6 +735,141 @@ div.sort-order ul.has-draggable-children:hover li:hover + li::after {
     -webkit-transform: scale(1);
             transform: scale(1);
   }
+}
+
+aside.sort-key {
+  display: block;
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 8px;
+  width: 280px;
+  background-color: white;
+  z-index: 10;
+  padding: 14px 13px 0px 8px;
+  left: calc(100% + 10px);
+  max-width: 45px;
+  border: 1px solid #CCC;
+}
+
+aside.sort-key h2 {
+  text-align: center;
+  padding: 0;
+  margin: 0 0 20px 0;
+  font-size: 15px;
+  color: #BBB;
+}
+
+aside.sort-key span.key-items {
+  display: block;
+  position: relative;
+  height: 30px;
+  padding-left: 25px;
+  opacity: 0.25;
+}
+
+aside.sort-key span.key-items::after {
+  content: '';
+  width: 23px;
+  height: 23px;
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  top: -8px;
+  left: 3px;
+  z-index: 12;
+}
+
+aside.sort-key span.key-items b {
+  font-size: 13px;
+  z-index: 20;
+  position: absolute;
+  margin: -2px 0 0 3px;
+  text-align: right;
+  overflow: hidden;
+  max-width: 0;
+}
+
+aside.sort-key span.key-items em {
+  display: block;
+  padding: 0;
+  border-radius: 8px;
+  position: absolute;
+  top: -5px;
+  left: 5px;
+  font-size: 12px;
+  max-width: 0;
+  max-height: 0;
+  overflow: hidden;
+}
+
+aside.sort-key span.key-items.key-item-1::after {
+  background-color: #EAEAEA;
+  border: 1px solid #676767;
+}
+
+aside.sort-key span.key-items.key-item-1 em {
+  background: #EAEAEA;
+  border-color: #676767;
+}
+
+aside.sort-key span.key-items.key-item-2::after {
+  background-color: #EEFFEE;
+  border: 1px solid #88ff88;
+}
+
+aside.sort-key span.key-items.key-item-2 em {
+  background: #EEFFEE;
+  border-color: #88ff88;
+}
+
+aside.sort-key span.key-items.key-item-3::after {
+  background-color: #FFEAEB;
+  border: 1px solid #ff848a;
+}
+
+aside.sort-key span.key-items.key-item-3 em {
+  background: #FFEAEB;
+  border-color: #ff848a;
+}
+
+aside.sort-key span.key-items.key-item-4::after {
+  content: '●';
+  text-align: center;
+  font-size: 18px;
+  line-height: 19px;
+  color: #900;
+  background-color: #FFFFAA;
+  border: 1px solid #cccc00;
+}
+
+aside.sort-key span.key-items.key-item-4 b {
+  color: #900;
+}
+
+aside.sort-key span.key-items.key-item-4 em {
+  background: #FFFFAA;
+  border-color: #cccc00;
+  color: #900;
+}
+
+aside.sort-key span.key-items.key-item-5::after {
+  content: '●';
+  text-align: center;
+  font-size: 18px;
+  line-height: 19px;
+  color: #FF0;
+  background-color: #F00;
+  border: 1px solid #cc0000;
+}
+
+aside.sort-key span.key-items.key-item-5 b {
+  color: #FF0;
+}
+
+aside.sort-key span.key-items.key-item-5 em {
+  background: #F00;
+  border-color: #ff7777;
+  color: #FFA;
 }
 
 .DELETE-US {
