--- a/public/lib/css/flambe.css
+++ b/public/lib/css/flambe.css
@@ -7,6 +7,27 @@
           box-sizing: border-box;
 }
 
+.remove-buttons {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M17.6 1.8c0 .7-.5 1.2-1.2 1.2H7.6C7 3 6.4 2.5 6.4 1.8 5.1 2.1 2 3 2 4.4l.2 1.3c3.2 3 15.8 3.1 19.5.3l.3-1.6C22 3 19 2 17.6 1.8zm3 7L18 22c-1.1 1.3-3.6 2-6 2s-5-.7-6-2C5.4 19.1 4 13.2 3.3 8.6 6.4 10 10.7 10 12.2 10c1.7 0 5.5-.1 8.5-1.3zM7.7 2c1 0 1.7-1.1 1.7-2h5.4c0 .9.8 2 1.7 2H7.6z'/%3E%3C/svg%3E");
+  width: 20px;
+  height: 20px;
+  float: right;
+  background-color: transparent;
+  border: 0 none;
+  margin: 6px 10px 0 0;
+  cursor: pointer;
+  opacity: 0.3;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  fill: #FF0000;
+}
+
+.remove-buttons:hover {
+  opacity: 1;
+  fill: #700;
+  fill-opacity: 0.5;
+}
+
 html,
 body {
   max-width: 100%;
