--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -30,9 +30,9 @@ html,
 body {
     max-width: 100%;
     width: 100vw;
-    height: 100vh;
-    max-height: 100%;
-    padding: 0;
+    // height: 100vh;
+    // max-height: 100%;
+    padding: 40px 0 70px;
     margin: 0;
 }
 
@@ -491,31 +491,57 @@ button.add-record {
 }
 #output-panels {
     position: relative;
+    max-width:80%;
+    margin:0 auto;
+
     aside.status-filters {
-        position: absolute;
         background: #fff;
         border: 1px solid #bbb;
-        padding: 10px;
         border-radius: 10px;
         line-height: 1.7;
-        top: 0;
-        right: 100px;
+        top: -10px;
+        right: 0;
         max-width: 200px;
         font-size: 14px;
+        position: absolute;
+        box-shadow: 0 15px 15px #0000, 10px 10px 10px #0000, -10px 10px 10px #0000;
+        overflow:hidden;
+        max-height:55px;
+
+        &:hover {
+            box-shadow: 0 15px 15px #0006, 10px 10px 10px #0006, -10px 10px 10px #0006;
+            max-height:295px;
+        }
 
         span {
             display: block;
             text-align: center;
             font-style: italic;
-            padding-bottom: 5px;
+            padding: 5px;
             border-bottom: 1px solid #aaa;
-            margin-bottom: 5px;
+            margin: 0 15px 5px;
+            width:180px;
         }
 
         h2 {
             font-size: 15px;
             text-align: center;
             margin: 0;
+        }
+
+        input {
+            margin-left:10px;
+            margin-bottom:11px;
+
+        }
+
+        label {
+            padding:5px 10px;
+            display:inline-block;
+
+            & + input {
+                margin-bottom:5px;
+            }
         }
     }
 }
@@ -578,8 +604,7 @@ button.add-record {
     }
 
     table.preview-table {
-        width: calc(100% - 400px);
-        margin: 10px 300px 50px 100px;
+        width: 100%;
         border: 1px solid black;
         font-family: sans-serif;
         tr {
@@ -649,6 +674,15 @@ tr > * {
 
 tr.obfuscated {
     display: none;
+}
+
+tr.total-row {
+    background-color:#FCC;
+    font-weight: bold;
+
+    td {
+        padding:8px;
+    }
 }
 
 /* ANIMATIONS AND @-RULES */
