--- a/public/lib/css/flambe.css
+++ b/public/lib/css/flambe.css
@@ -32,9 +32,7 @@ html,
 body {
   max-width: 100%;
   width: 100vw;
-  height: 100vh;
-  max-height: 100%;
-  padding: 0;
+  padding: 40px 0 70px;
   margin: 0;
 }
 
@@ -533,34 +531,60 @@ button.add-record {
 
 #output-panels {
   position: relative;
+  max-width: 80%;
+  margin: 0 auto;
 }
 
 #output-panels aside.status-filters {
-  position: absolute;
   background: #fff;
   border: 1px solid #bbb;
-  padding: 10px;
   border-radius: 10px;
   line-height: 1.7;
-  top: 0;
-  right: 100px;
+  top: -10px;
+  right: 0;
   max-width: 200px;
   font-size: 14px;
+  position: absolute;
+  -webkit-box-shadow: 0 15px 15px #0000, 10px 10px 10px #0000, -10px 10px 10px #0000;
+          box-shadow: 0 15px 15px #0000, 10px 10px 10px #0000, -10px 10px 10px #0000;
+  overflow: hidden;
+  max-height: 55px;
+}
+
+#output-panels aside.status-filters:hover {
+  -webkit-box-shadow: 0 15px 15px #0006, 10px 10px 10px #0006, -10px 10px 10px #0006;
+          box-shadow: 0 15px 15px #0006, 10px 10px 10px #0006, -10px 10px 10px #0006;
+  max-height: 295px;
 }
 
 #output-panels aside.status-filters span {
   display: block;
   text-align: center;
   font-style: italic;
-  padding-bottom: 5px;
+  padding: 5px;
   border-bottom: 1px solid #aaa;
-  margin-bottom: 5px;
+  margin: 0 15px 5px;
+  width: 180px;
 }
 
 #output-panels aside.status-filters h2 {
   font-size: 15px;
   text-align: center;
   margin: 0;
+}
+
+#output-panels aside.status-filters input {
+  margin-left: 10px;
+  margin-bottom: 11px;
+}
+
+#output-panels aside.status-filters label {
+  padding: 5px 10px;
+  display: inline-block;
+}
+
+#output-panels aside.status-filters label + input {
+  margin-bottom: 5px;
 }
 
 .output-table a.issue-link,
@@ -634,8 +658,7 @@ button.add-record {
 }
 
 .output-table table.preview-table {
-  width: calc(100% - 400px);
-  margin: 10px 300px 50px 100px;
+  width: 100%;
   border: 1px solid black;
   font-family: sans-serif;
 }
@@ -704,6 +727,15 @@ tr > * {
 
 tr.obfuscated {
   display: none;
+}
+
+tr.total-row {
+  background-color: #FCC;
+  font-weight: bold;
+}
+
+tr.total-row td {
+  padding: 8px;
 }
 
 /* ANIMATIONS AND @-RULES */
