--- a/_scss/flambe.scss
+++ b/_scss/flambe.scss
@@ -634,7 +634,18 @@ button.add-record {
         }
     }
 }
+
+tr.row-status-Definition td:first-child{ border-left:1px solid #000; padding-left:12px; }
+tr.row-status-Solution_Definition td:first-child{ border-left:8px solid #AAA; }
+tr.row-status-In_Development td:first-child{ border-left:8px solid #00F; }
+tr.row-status-In_Progress td:first-child{ border-left:8px solid #0FF; }
+tr.row-status-Completed td:first-child{ border-left:8px solid #0F0; }
+tr.row-status-Blocked td:first-child{ border-left:8px solid #0FF; }
+tr.row-status-Demo td:first-child{ border-left:8px solid #ff0; }
+
 td {
+    
+
     &:nth-child(-n + 2) {
         text-align: left;
     }
@@ -920,5 +931,32 @@ aside.sort-key {
                 color: #ffa;
             }
         }
+    }
+}
+
+.info-icon {
+    background-color:#00F;
+    color: #FFF;
+    border-radius: 50%;
+    width:18px;
+    height:18px;
+    line-height:18px;
+    text-align: center;
+    text-decoration:none;
+    font:bold 16px serif;
+    margin:2px;
+    float:right;
+
+    &:hover::after {
+        content:attr(data-text);
+        position: absolute;
+        width:300px;
+        padding:20px;
+        border:2px solid blue;
+        border-radius:20px;
+        box-shadow:0 10px 10px #000;
+        color:black;
+        background-color:white;
+        font-weight:normal;
     }
 }
